--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
-    <!--<item name="android:fitsSystemWindows">true</item>-->//注意这个不能在这里加
+    <!--<item name="android:fitsSystemWindows">true</item>-->//注意这个不能在这里加z
 
     <item name="android:windowTranslucentStatus">false</item>//半透明状态
     <!--<item name="android:windowTranslucentNavigation">true</item>-->
