--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Audio"
-        android:onClick="goAudio"/>
+        android:onClick="goAudio"
+        android:text="Audio" />
 
     <Button
         android:id="@+id/button2"
@@ -21,8 +21,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="57dp"
-        android:text="Camera"
-        android:onClick="goCamera"/>
+        android:onClick="goCamera"
+        android:text="Camera" />
 
     <Button
         android:id="@+id/button3"
@@ -31,7 +31,17 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="128dp"
-        android:text="Player"
-        android:onClick="goPlayer"/>
+        android:onClick="goPlayer"
+        android:text="Player" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="196dp"
+        android:onClick="goTest"
+        android:text="Test" />ss
 
 </RelativeLayout>
