--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".camera.CameraFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.opengl.GLSurfaceView
+        android:id="@+id/glsv_camera"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
