--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,40 +8,36 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bn_go_audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goAudio"
         android:text="Audio" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bn_go_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="57dp"
-        android:onClick="goCamera"
         android:text="Camera" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/bn_go_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="128dp"
-        android:onClick="goPlayer"
         android:text="Player" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/bn_go_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="196dp"
-        android:onClick="goTest"
         android:text="Test" />ss
 
 </RelativeLayout>
