--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <!--<item name="android:fitsSystemWindows">true</item>-->//注意这个不能在这里加
+    </style>
 
+    <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <!--<item name="android:fitsSystemWindows">true</item>-->//注意这个不能在这里加
         //application的主题加上这个属性，表示状态栏半透明，另外，会使得状态栏会悬浮在activity之上
         //(此时，activity布局会扩展到状态栏底部（Z轴方向）)
         <item name="android:windowTranslucentStatus">true</item>
-        <!--<item name="android:windowTranslucentNavigation">true</item>-->
-        <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
 </resources>
