--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -19,11 +19,11 @@
 
     <ImageView
         android:id="@+id/iv_take_pic"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/take_pic" />
+        android:src="@drawable/record_button_selector" />
 
 
 </FrameLayout>
