--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -17,13 +17,40 @@
 
     </com.ponkan.banana.camera.widget.AspectFrameLayout>
 
-    <ImageView
-        android:id="@+id/iv_take_pic"
-        android:layout_width="wrap_content"
+    <com.ponkan.banana.camera.widget.SegmentBar
+        android:id="@+id/sb_take_video"
+        android:layout_width="match_parent"
+        android:layout_height="8dp" />
+
+    <FrameLayout
+        android:id="@+id/fl_bottom_control"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/record_button_selector" />
+        android:layout_gravity="bottom">
+        <ImageView
+            android:id="@+id/iv_take_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/record_button_selector" />
+
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/delete"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="30dp"/>
+
+        <ImageView
+            android:id="@+id/iv_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:layout_gravity="right|center_vertical"
+            android:src="@drawable/confirm"/>
+    </FrameLayout>
 
 
 </FrameLayout>
