添加模式控件

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -52,5 +52,13 @@
             android:src="@drawable/confirm"/>
     </FrameLayout>
 
+    <com.ponkan.banana.camera.widget.ModeView
+        android:id="@+id/mv_mode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+    </com.ponkan.banana.camera.widget.ModeView>
+
 
 </FrameLayout>
