--- a/app/src/main/res/layout/mode_layout.xml
+++ b/app/src/main/res/layout/mode_layout.xml
@@ -18,7 +18,7 @@
     <View
         android:layout_width="3dp"
         android:layout_height="3dp"
-        android:layout_alignLeft="@id/tv_pic"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/tv_pic"
         android:background="@drawable/dot" />
 
